fixed logo align left to center

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
   color: white;
 }
 
+.App-header a{
+    float: none;
+}
+
 .App-intro {
   font-size: large;
 }
